--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,18 @@ services:
     stdin_open: true
     tty: true
     ports:
-      - 1099:1099
-      - 8101:8101
-      - 8181:8181
-      - 44444:44444
+      - "1099:1099"
+      - "8101:8101"
+      - "8181:8181"
+      - "44444:44444"
     environment:
       - COMPANION_ROLE=demo
-      - COMPANION_DB_HOST=db1
-      - COMPANION_SOLR_HOST=solr1
-      - COMPANION_ZK_HOST=zoo1
+      - POSTGRES_SERVICE_HOST=db1
+      - POSTGRES_SERVICE_PORT=5432
+      - SOLR_SERVICE_HOST=solr1
+      - SOLR_SERVICE_PORT=8983
+      - ZOO_SERVICE_HOST=zoo1
+      - ZOO_SERVICE_PORT=2181
     networks:
       - companion_demo
 
@@ -33,7 +36,7 @@ services:
     volumes:
       - ./demo-db:/docker-entrypoint-initdb.d/
     ports:
-      - 5432:5432
+      - "5432:5432"
     networks:
       - companion_demo
 
@@ -45,6 +48,7 @@ services:
       - "8983:8983"
     environment:
       - ZK_HOST=zoo1:2181
+      - SOLR_HOST=localhost
     networks:
       - companion_demo
     depends_on:
@@ -55,8 +59,8 @@ services:
     container_name: companion_zoo
     hostname: zoo1
     ports:
-      - 2181:2181
-      - 7001:7000
+      - "2181:2181"
+      - "7001:7000"
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=zoo1:2888:3888;2181
