--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       - "8983:8983"
     environment:
       - ZK_HOST=zoo1:2181
-      - SOLR_HOST=localhost
+      - SOLR_HOST=solr1
     networks:
       - companion_demo
     depends_on:
